<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:fillViewport="true">-->

        <RelativeLayout
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.cardview.widget.CardView
                android:id="@+id/info_CV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10sp">

                <RelativeLayout
                    android:id="@+id/name_RL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_10sp">

                    <LinearLayout
                        android:id="@+id/LL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/profile_image"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/dimen_10sp"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="@font/baumans"
                            android:gravity="center_horizontal"
                            android:padding="@dimen/dimen_5sp"
                            android:text="@string/name"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/name_LL"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/LL"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/dimen_10sp"
                        android:weightSum="3">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:fontFamily="@font/baumans"
                            android:gravity="center_horizontal"
                            android:padding="@dimen/dimen_5sp"
                            android:text="@string/designation"
                            android:textColor="@color/black"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/name_LL"
                        android:orientation="horizontal"
                        android:paddingLeft="@dimen/dimen_10sp"
                        android:weightSum="3">

                        <RelativeLayout
                            android:id="@+id/contact_RL"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <com.airbnb.lottie.LottieAnimationView
                                android:id="@+id/phone_LA"
                                android:layout_width="@dimen/dimen_30sp"
                                android:layout_height="@dimen/dimen_30sp"
                                android:layout_gravity="center"
                                app:lottie_autoPlay="true"
                                app:lottie_loop="true"
                                app:lottie_rawRes="@raw/call"/>

                            <TextView
                                android:layout_toRightOf="@+id/phone_LA"
                                android:id="@+id/contactno_TV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/baumans"
                                android:text="@string/contactno"
                                android:textColor="@color/black"
                                android:layout_centerVertical="true"
                                android:singleLine="true"/>


                        </RelativeLayout>


                        <RelativeLayout
                            android:id="@+id/mail_RL"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="right">

                            <com.airbnb.lottie.LottieAnimationView
                                android:id="@+id/mail_LA"
                                android:layout_width="@dimen/dimen_30sp"
                                android:layout_height="@dimen/dimen_30sp"
                                android:layout_gravity="center"
                                app:lottie_autoPlay="true"
                                app:lottie_loop="true"
                                app:lottie_rawRes="@raw/mail"/>

                            <TextView
                                android:id="@+id/mail_TV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@+id/mail_LA"
                                android:fontFamily="@font/baumans"
                                android:singleLine="true"
                                android:text="@string/mail"
                                android:textColor="@color/black" />
                        </RelativeLayout>

                    </LinearLayout>

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/profile_image"
                        android:layout_width="@dimen/dimen_100sp"
                        android:layout_height="@dimen/dimen_100sp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_profile"
                        app:civ_border_color="@color/white"
                        app:civ_border_width="2dp" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/decription_CV"
                android:layout_below="@+id/info_CV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5sp"
                android:paddingTop="@dimen/dimen_2sp"
                android:paddingBottom="@dimen/dimen_2sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_5sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/experience"
                    android:textColor="@color/black"
                    android:fontFamily="@font/baumans"
                    android:layout_marginLeft="@dimen/dimen_10sp"/>

                <TextView
                    android:layout_marginTop="@dimen/dimen_5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:fontFamily="@font/baumans"
                    android:layout_marginLeft="@dimen/dimen_10sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/decription_CV"
                app:cardElevation="@dimen/dimen_5sp"
                app:cardCornerRadius="@dimen/dimen_10sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/dimen_10sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/experience_company"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:fontFamily="@font/baumans"
                        android:layout_marginLeft="@dimen/dimen_10sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/experienceinfo_RL"
                android:layout_below="@+id/decription_CV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_5sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

<!--    </ScrollView>-->

</RelativeLayout>